--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-cheby_fit/n8_xml/2008_000197.xml
 /data/*
 /sbd/*
 /ori_label_center_edage
 /benchmark_RELEASE
 /gluon-cv_bak/*
+/archived/*
 
 *.params
 *.log
+*.jpg
+
